Slides 05: Add epipolar plane slide

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -891,6 +891,16 @@
             \includegraphics[width=0.6\textwidth]{./images/epipolar_geometry_monocular_left_observation_scale.pdf}
         \end{center}
     }
+    \only<3>{
+        \begin{center}
+            \includegraphics[width=0.6\textwidth]{./images/epipolar_geometry_monocular_stereo_observation.pdf}
+        \end{center}
+    }
+    \only<4>{
+        \begin{center}
+            \includegraphics[width=0.6\textwidth]{./images/epipolar_geometry_epipolar_plane.pdf}
+        \end{center}
+    }
 \end{frame}
 
 % --- Slide 1: Epipolar Constraint (Geometric Basis) ---
