--- a/tps/tp_factor_graph/tp5.tex
+++ b/tps/tp_factor_graph/tp5.tex
@@ -28,21 +28,22 @@ Esta tarea se basa en Homework 7 -- SLAM of the NA 568 Mobile Robotics: Methods 
 %\author{Maani Ghaffari \\ University of Michigan}
 %\date{March 19, 2022}
 
-\section*{Submission Instructions}
+\section*{Entrega}
+	\begin{itemize}
+		\item Se debe proveer un repositorio git que contenga el código desarrollado, una imagen docker y un archivo \lstinline{README.md} con las instrucciones de compilación y ejecución.
+		
+		\item Se debe entregar un informe en Lyx o \LaTeX\  explicando el trabajo realizado y analizando los resultados obtenidos.
+	\end{itemize}
 
-\begin{enumerate}
-    \item A .tar.gz or .zip file containing a directory named after your uniqname with the structure shown below. \\
-    \lstinline[style=bash]{alincoln_hw7.zip:} \\
-    \lstinline[style=bash]{alincoln_hw7/} \\
-    \lstinline[style=bash]{alincoln_hw7/YOUR_WORKING_CODE} \\
-    You may use C++, Python, or MATLAB for your programming.
+\section*{Evaluación}
+	\begin{itemize}
+		\item Haciendo únicamente los ejercicios obligarorios (no opcionales), el trabajo tiene una nota máxima de 8. Los ejercicios opcionales permiten llegar a la nota máxima de 10.
+		
+		\item Entregas Fuera de Término: Si la entrega se realiza durante la primer semana luego del plazo, se decuentan 2 puntos. Si la entrega es más tarde que esto último la nota máxima es de 6.
+	\end{itemize}
 
-    \item A PDF with the written portion of your write-up. Scanned versions of hand-written documents, converted to PDFs, are perfectly acceptable. No other formats (e.g., doc) are acceptable. Your PDF file should adhere to the following naming convention: \lstinline[style=bash]{alincoln_hw7.pdf}.
-
-    \item Submit your complete source code. We will compile and run your code for evaluation.
-\end{enumerate}
-
-\section*{Pose Graph SLAM using GTSAM Library}
+\section*{Pose Graph SLAM usando la librería GTSAM}
+%
 En este trabajo práctico, resolverá el problema SLAM con Pose-Graph utilizando la librería GTSAM. Si no está familiarizado con GTSAM, encontrará un tutorial detallado en su sitio web: \url{https://gtsam.org/tutorials/intro.html}. Para instalar GTSAM en c++, deberá clonar el código del repositorio: \url{https://github.com/borglab/gtsam}, descargar (usando git) la última versión y compilar la librería siguiendo las instrucciones.
 
 Después de instalar GTSAM con éxito, escriba una función para leer archivos G2O \footnote{\url{https://github.com/RainerKuemmerle/g2o/wiki/File-Format}} y resuelva el problema de optimización de grafos para casos 2D y 3D usando GTSAM. En esta tarea, utilizamos los datos proporcionados en \url{https://lucacarlone.mit.edu/datasets/}.
@@ -59,28 +60,27 @@ El primer paso es clonar e instalar la librería GTSAM. Las instrucciones detall
 
 \textbf{Remark 2.} \textit{GTSAM requiere la librería Eigen. Se puede descargar e instalar desde aquí: \url{http://eigen.tuxfamily.org/index.php?title=Main_Page}}
 
-\textbf{Remark 3.} \textit{Please notice prerequisites: Boost >= 1.58 (Ubuntu: sudo apt-get install libboost-all-dev); CMake >= 3.0 (Ubuntu: sudo apt-get install cmake); A modern compiler, i.e., at least gcc 4.7.3 on Linux.}
+\textbf{Remark 3.} \textit{Por favor, tenga en cuenta los requisitos previos: Boost >= 1.58 (Ubuntu: sudo apt-get install libboost-all-dev); CMake >= 3.0 (Ubuntu: sudo apt-get install cmake); Un compilador moderno, es decir, al menos gcc 4.7.3 en Linux.}
 
 \begin{itemize}
-    \item Go to gtsam repository \url{https://github.com/borglab/gtsam} and click the green clone or download button on the right hand side to clone the repository to your machine.
-    \item In the terminal, enter command (this will allow you to navigate to the repository)
+    \item Clonar el repositorio de gtsam \url{https://github.com/borglab/gtsam}
     
     \lstinline[style=bash]{cd <path_to_your_repository>}
     
-    \item Then create a new folder named build by
+    \item Crear un nuevo directorio llamado ``build'':
     
     \lstinline[style=bash]{mkdir build}
     
-    \item Navigate into the build folder
+    \item Navegar al directorio de compilación:
     
     \lstinline[style=bash]{cd build}
-    
-    \item run cmake to create essential links for building files (\textbf{Note}: if you want to use the python wrapper, you will have to do something different here. Please jump to the python wrapper section)
-    
+
+    \item Ejecutar cmake para crear enlaces esenciales para los archivos de compilación (\textbf{Nota}: si desea utilizar el wrapper de python, deberá hacer algo diferente aquí. Por favor, salte a la sección del wrapper de python)
+
     \lstinline[style=bash]{cmake ..}
 \end{itemize}
 
-\textbf{Remark 4.} \textit{If you have error saying could not find Boost, you may try manually install boost following \href{https://www.boost.org/doc/libs/1_66_0/more/getting_started/unix-variants.html\#get-boost}{this tutorial} and make sure you are pointing to the correct directory by adding following commands in CMakeList.txt :}
+\textbf{Remark 4.} \textit{Si recibe un error que indica que no se encuentra Boost, puede intentar instalarlo manualmente siguiendo \href{https://www.boost.org/doc/libs/1_66_0/more/getting_started/unix-variants.html\#get-boost}{este tutorial} y asegúrese de que está apuntando al directorio correcto agregando los siguientes comandos en CMakeList.txt:}
 
 \begin{lstlisting}[style=bash]
 SET (BOOST_ROOT "<your_boost_path>")
@@ -91,9 +91,9 @@ set (Boost_NO_BOOST_CHAKE ON)
 \end{lstlisting}
 
 \begin{itemize}
-    \item make the file to the build folder (The command -j10 indicates the number of threads to be used during make. It'll make the compilation faster. I recommend using your max number of cores - 2, otherwise your machine may get stuck. I have 12 threads on my machine, so I use -j10.) \lstinline[style=bash]{make -j10}
-    \item install the gtsam library to your machine. \lstinline[style=bash]{sudo make install -j10}
-    \item At this step, you will be able to see the path where all the packages are installing to. If later you somehow cannot link the install path to your code, you can come back to this step and see where it is installed to.
+    \item Crea el archivo en el directorio de compilación (El comando -j10 indica el número de hilos que se usarán durante la compilación. Esto acelerará el proceso. Se recomienda usar el número máximo de núcleos menos 2, de lo contrario, tu máquina podría bloquearse. Si tiene 12 hilos en su máquina, use -j10). \lstinline[style=bash]{make -j10}
+    \item Instalar la librería GTSAM en tu máquina. \lstinline[style=bash]{sudo make install -j10}
+    \item En este paso, podrás ver la ruta donde se están instalando todos los paquetes. Si más tarde no puedes vincular la ruta de instalación a tu código, puedes volver a este paso y ver dónde se instaló.
 \end{itemize}
 
 \subsubsection*{C++}
@@ -105,30 +105,30 @@ include_directories(${GTSAM_INCLUDE_DIR})
 target_link_libraries(<your_project> <your_project_lib> gtsam)
 \end{lstlisting}
 
-Puede consultar algunos ejemplos de gtsam de C++ \url{https://github.com/borglab/gtsam/tree/develop/examples}.
+Puede consultar algunos ejemplos de GTSAM en C++ \url{https://github.com/borglab/gtsam/tree/develop/examples}.
 
 \subsubsection*{MATLAB Wrapper}
-If you have a newer Ubuntu system (later than 10.04), you must make a small modification to your MATLAB installation, due to MATLAB being distributed with an old version of the C++ standard library. Delete or rename all files starting with libstdc++ in your MATLAB installation directory, in paths:
+Si tiene un sistema Ubuntu más reciente (posterior a la versión 10.04), deberá realizar una pequeña modificación en su instalación de MATLAB, ya que MATLAB se distribuye con una versión antigua de la biblioteca estándar de C++. Elimine o cambie el nombre de todos los archivos que comiencen con libstdc++ en el directorio de instalación de MATLAB, en las siguientes rutas:
 
 \begin{itemize}
     \item \lstinline[style=bash]|/usr/local/MATLAB/{version}/sys/os/{system}|
     \item \lstinline[style=bash]|/usr/local/MATLAB/{version}/bin/{system}|
 \end{itemize}
 
-For MATLAB wrapper, you can do it in two ways:
+Para el wrapper de MATLAB, se puede hacer de dos maneras:
 
 \begin{enumerate}
     \item download the precompiled wrapper from \url{http://www.borg.cc.gatech.edu/download.html},
     \item or install from sources following the instructions in \url{https://github.com/borglab/gtsam/tree/develop/matlab}.
 \end{enumerate}
 
-We recommend using the pre-compiled wrapper if you are not familiar with linux systems. Below are instructions on how to add the pre-compiled MATLAB wrapper to your toolbox.
+Recomendamos usar el wrapper precompilado si no está familiarizado con los sistemas Linux. A continuación encontrará instrucciones sobre cómo agregar el wrapper de MATLAB precompilado a su conjunto de herramientas.
 
 \begin{itemize}
-    \item Download the pre-compiled wrapper here. Download precompiled MATLAB toolbox (Works with MATLAB R2011a and later) depends on your system OS (Mac OS 64-bit / Linux 64-bit / Windows 64-bit).
-    \item Extract the folder. (\textbf{Note: for linux system}, after extracting, you'll have to right click on the extracted file $\rightarrow$ Open With $\rightarrow$ Archive Mounter. Your will then see a \lstinline[style=bash]{gtsam-toolbox-3.2.0-lin64} on your left side along with Computer, OS... The folder inside named \lstinline[style=bash]{gtsam_toolbox} is the folder we want to use.)
-    \item Put the \lstinline[style=bash]{gtsam_toolbox} folder under \lstinline[style=bash]{<YOUR_MATLAB_INSTALL_PATH>/toolbox/}
-    \item Every time you open your MATLAB, at the left side of your GUI, navigate to your \lstinline[style=bash]{gtsam_toolbox} $\rightarrow$ right click $\rightarrow$ add to path $\rightarrow$ selected folder. Then you should be able to run the example codes under the example folder. Or you can add the following commends as your first part of code.
+    \item Descargar el wrapper precompilado. Descargar el toolbox de MATLAB precompilado (compatible con MATLAB R2011a y versiones posteriores) según su sistema operativo (Mac OS de 64 bits / Linux de 64 bits / Windows de 64 bits).
+    \item Extraer la carpeta. (\textbf{Nota: para sistemas linux}, después de la extracción, deberá hacer clic derecho en el archivo extraído $\rightarrow$ Open With $\rightarrow$ Archive Mounter. Luego verá un \lstinline[style=bash]{gtsam-toolbox-3.2.0-lin64} en el lado izquierdo junto con Computadora, OS... La carpeta dentro llamada \lstinline[style=bash]{gtsam_toolbox} es la carpeta que queremos usar.)
+    \item Colocar la carpeta \lstinline[style=bash]{gtsam_toolbox} en \lstinline[style=bash]{<YOUR_MATLAB_INSTALL_PATH>/toolbox/}
+    \item Cada vez que abra su MATLAB, en el lado izquierdo de su GUI, navegue hasta su \lstinline[style=bash]{gtsam_toolbox} $\rightarrow$ clic derecho $\rightarrow$ add to path $\rightarrow$ selected folder. Luego debería poder ejecutar los códigos de ejemplo en la carpeta de ejemplos. O puede agregar los siguientes comandos al inicio del código.
     \begin{lstlisting}[style=bash]
 addpath('<your_gtsam_toolbox_path>')
 import gtsam.*
@@ -222,7 +222,7 @@ Utilizar el solver ISAM2 para optimizar la trayectoria de forma incremental (a m
 
 \textbf{Sugerencia:} Puede usar \lstinline[style=bash]{NonLinearFactorGraph} como grafo, usar \lstinline[style=bash]{gtsam.ISAM2()} como algoritmo de actualización, usar \lstinline[style=bash]{Values} para su estimación inicial y usar las funciones \lstinline[style=bash]{graph.add()}, \lstinline[style=bash]{initial.insert()}, \lstinline[style=bash]{isam.update()} y \lstinline[style=bash]{isam.calculateEstimate()} como vea conveniente. Sin embargo, los nombres de las funciones pueden ser diferentes para las diferentes versiones de GTSAM.
 
-\section{3D Graph SLAM}
+\section{Graph-SLAM 3D}
 \subsection{A.}
 Escriba una función para leer el archivo 3D Garage G2O\footnote{\url{https://www.dropbox.com/s/zu23p8d522qccor/parking-garage.g2o?dl=0}} desde el formato G2O y genere poses y aristas.
 
