--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -28,7 +28,7 @@ El objetivo de este trabajo práctico es comprender el modelo cinemático y la e
 
 \section{Entrega}
 \begin{itemize}
-    \item Se debe proveer un repositorio git que contenga el código desarrollado y un archivo \lstinline{README.md} con las instrucciones de compilación y ejecución. Se recomienda hacer una imagen Docker para facilitar la reproducción de los resuldatos.
+    \item Se debe proveer un repositorio git que contenga el código desarrollado y un archivo \lstinline{README.md} con las instrucciones de compilación y ejecución. Se recomienda hacer una imagen Docker para facilitar la reproducción de los resultados.
 
     \item Se debe entregar un informe en Lyx o \LaTeX\  explicando el trabajo realizado y analizando los resultados obtenidos.
     
@@ -38,6 +38,7 @@ El objetivo de este trabajo práctico es comprender el modelo cinemático y la e
 \section{Evaluación}
 \begin{itemize}
     \item Haciendo únicamente los ejercicios obligarorios (no opcionales), el trabajo tiene una nota máxima de 8. Los ejercicios opcionales permiten llegar a la nota máxima de 10.
+
     \item Entregas Fuera de Término: Si la entrega se realiza durante la primer semana luego del plazo, se decuentan 2 puntos. Si la entrega es más tarde que esto último la nota máxima es de 6.
 \end{itemize}
 
