Slides 05: Minor changes

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -1327,12 +1327,10 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Solving for $F$}
+    \frametitle{Solving for $\fundamentalMatrix$}
     
-    Step C: Find least squares solution for fundamental matrix $F$.
-
-    \vspace{0.5em} % Add some vertical space
-
+    Step C: Find least squares solution for fundamental matrix $\fundamentalMatrix$.
+    
     We want $\mathbf{A f}$ as close to 0 as possible and $||\mathbf{f}||^2 = 1$:
 
     \begin{center}
