--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -1604,43 +1604,50 @@
 \begin{frame}
     \frametitle{Computing Depth}
     The imaging equations:
-    $$
-    \vec{u}_r \propto
-    \underbrace{\begin{bmatrix}
-        m_{11} & m_{12} & m_{13} & m_{14} \\
-        m_{21} & m_{22} & m_{23} & m_{24} \\
-        m_{31} & m_{32} & m_{33} & m_{34}
-    \end{bmatrix}}_{\text{Known}}
-    \underbrace{\begin{bmatrix} x_r \\ y_r \\ z_r \\ 1 \end{bmatrix}}_{\text{Unknown}}
-    \quad \vec{u}_r = \mathbf{M}_r \tilde{\mathbf{x}}_r
-    $$
-    $$
-    \vec{u}_l \propto
-    \underbrace{\begin{bmatrix}
-        p_{11} & p_{12} & p_{13} & p_{14} \\
-        p_{21} & p_{22} & p_{23} & p_{24} \\
-        p_{31} & p_{32} & p_{33} & p_{34}
-    \end{bmatrix}}_{\text{Known}}
-    \underbrace{\begin{bmatrix} x_r \\ y_r \\ z_r \\ 1 \end{bmatrix}}_{\text{Unknown}}
-    \quad \vec{u}_l = \mathbf{P}_l \tilde{\mathbf{x}}_r
-    $$
+
+    \begin{columns}
+        \begin{column}{0.5\textwidth}
+            \begin{equation*}
+                \vec{u}_r \equiv
+                \underbrace{\begin{bmatrix}
+                    m_{11} & m_{12} & m_{13} & m_{14} \\
+                    m_{21} & m_{22} & m_{23} & m_{24} \\
+                    m_{31} & m_{32} & m_{33} & m_{34}
+                \end{bmatrix}}_{\text{Known}}
+                \underbrace{\begin{bmatrix} x_r \\ y_r \\ z_r \\ 1 \end{bmatrix}}_{\text{Unknown}}
+                \quad \vec{u}_r = \mathbf{M}_r \tilde{\mathbf{x}}_r
+            \end{equation*}
+        \end{column}
+        \begin{column}{0.5\textwidth}
+            \begin{equation*}
+                \vec{u}_l \equiv
+                \underbrace{\begin{bmatrix}
+                    p_{11} & p_{12} & p_{13} & p_{14} \\
+                    p_{21} & p_{22} & p_{23} & p_{24} \\
+                    p_{31} & p_{32} & p_{33} & p_{34}
+                \end{bmatrix}}_{\text{Known}}
+                \underbrace{\begin{bmatrix} x_r \\ y_r \\ z_r \\ 1 \end{bmatrix}}_{\text{Unknown}}
+                \quad \vec{u}_l = \mathbf{P}_l \tilde{\mathbf{x}}_r
+            \end{equation*}
+        \end{column}
+    \end{columns}
 
     Rearranging the terms:
-    $$
-    \begin{bmatrix}
-        u_r m_{31} - m_{11} & u_r m_{32} - m_{12} & u_r m_{33} - m_{13} \\
-        v_r m_{31} - m_{21} & v_r m_{32} - m_{22} & v_r m_{33} - m_{23} \\
-        u_l p_{31} - p_{11} & u_l p_{32} - p_{12} & u_l p_{33} - p_{13} \\
-        v_l p_{31} - p_{21} & v_l p_{32} - p_{22} & v_l p_{33} - p_{23}
+    \begin{equation*}
+        \begin{bmatrix}
+            u_r m_{31} - m_{11} & u_r m_{32} - m_{12} & u_r m_{33} - m_{13} \\
+            v_r m_{31} - m_{21} & v_r m_{32} - m_{22} & v_r m_{33} - m_{23} \\
+            u_l p_{31} - p_{11} & u_l p_{32} - p_{12} & u_l p_{33} - p_{13} \\
+            v_l p_{31} - p_{21} & v_l p_{32} - p_{22} & v_l p_{33} - p_{23}
+        \end{bmatrix}
+        \begin{bmatrix} x_r \\ y_r \\ z_r \end{bmatrix} =
+        \begin{bmatrix}
+            m_{14} - u_r m_{34} \\
+            m_{24} - v_r m_{34} \\
+            p_{14} - u_l p_{34} \\
+            p_{24} - v_l p_{34}
     \end{bmatrix}
-    \begin{bmatrix} x_r \\ y_r \\ z_r \end{bmatrix} =
-    \begin{bmatrix}
-        m_{14} - u_r m_{34} \\
-        m_{24} - v_r m_{34} \\
-        p_{14} - u_l p_{34} \\
-        p_{24} - v_l p_{34}
-    \end{bmatrix}
-    $$
+    \end{equation*}
 \end{frame}
 
 % --- Slide 18: Computing Depth (Least Squares) ---
